prevent wrapping on cv button

--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ a {
 }
 
 a.btn {
+    white-space: nowrap;
     align-self: flex-start;
     display: inline-block;
     padding: 0.5rem 1rem;
